<resources>
    <string name="app_name">Thoughtly</string>
    <string name="welcome">Welcome to</string>
    <string name="welcome_thoughtly">Hey, Welcome to Thoughtly</string>
    <string name="provide">Please tell us about yourself</string>
    <string name="login_details">Please login or register new user</string>
    <string name="account">Account</string>
    <string name="about">Developer</string>
    <string name="reminder">Reminder</string>
    <string name="mainWord">Main</string>
    <string name="add_description">Add new Thought</string>
    <string name="thought_image">Thought Image</string>
    <string name="start_recording">Start Recording</string>
    <string name="hold_down">Keep holding the button to record</string>
    <string name="play_button">Play Button</string>
    <string name="stop_button">Stop Button</string>
    <string name="edit_button">Edit Button</string>
    <string name="done_button">Done Editing</string>
    <string name="add_details">Add some details to your Thought</string>
    <string name="notification_switch">Do you want to receive daily notification?</string>
    <string name="developed_by">Thoughtly is developed by</string>
    <string name="fulfillment">This application is a project to fulfill the requirements
        for Mobile Application Development module in Auckland Institute of Studies (AIS)</string>
    <string name="developer_name">Karim Saleh</string>
    <string name="call">Call me</string>
    <string name="sms">Text me</string>
    <string name="website">Visit AIS</string>
    <string name="your_name">Your name:</string>
    <string name="email">Your E-mail:</string>
    <string name="password">Your Password:</string>
    <string name="new_password">Your new Password:</string>
    <string name="dob">Your date of birth:</string>
    <string name="start">Start</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="logout">Logout</string>
    <string name="your_info">Your account info</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
