<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="40dp"
    tools:context=".RegisterUserActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_semibold"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:textColor="@color/important"
        android:text="@string/welcome_thoughtly"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_semibold"
        android:textSize="20sp"
        android:textColor="@color/important"
        android:text="@string/provide"
        android:textAlignment="center"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background"
            android:inputType="textMultiLine"
            android:fontFamily="@font/open_sans_regular"
            android:textSize="20sp"
            android:maxLength="30"
            android:layout_marginTop="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/your_name"
            android:textColor="@color/normal"
            android:focusable="true"
            android:id="@+id/userNameEdit"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/open_sans_regular"
            android:textSize="20sp"
            android:maxLength="30"
            android:layout_marginTop="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/email"
            android:textColor="@color/normal"
            android:focusable="true"
            android:id="@+id/emailEdit"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background"
            android:fontFamily="@font/open_sans_regular"
            android:textSize="20sp"
            android:maxLength="30"
            android:layout_marginTop="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/dob"
            android:textColor="@color/normal"
            android:clickable="true"
            android:focusable="false"
            android:id="@+id/dobEdit"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background"
            android:inputType="textPassword"
            android:fontFamily="@font/open_sans_regular"
            android:textSize="20sp"
            android:maxLength="30"
            android:layout_marginTop="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/password"
            android:textColor="@color/normal"
            android:focusable="true"
            android:id="@+id/passwordEdit"/>

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registerProgress"
            style="?android:attr/progressBarStyleSmall"
            android:max="100"
            android:backgroundTint="@color/white" />

        <Button
            android:id="@+id/startAppButton"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:textColor="@color/normal"
            android:textAlignment="center"
            android:textSize="20sp"
            android:background="@color/colorPrimary"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/register"/>

    </LinearLayout>
</LinearLayout>